--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,29 @@
 spring.application.name=eclnLogisticsBot
 bot.name=EcolandLogisticsBot
 bot.token=7615096778:AAEaprEhzUuaSeKyY6m7iHYM5WJsCtmN2LU
+ecoland.password=888
+transport.password=999
+
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/eclnlogbotdb
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.main.banner-mode=off
+spring.output.ansi.enabled=ALWAYS
+
+spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.sql.init.mode=always
+
+logging.level.org.springframework.orm.jpa=INFO
+logging.level.org.springframework.transaction=INFO
+logging.level.org.springframework.transaction.interceptor=TRACE
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.ru.practicum=DEBUG
+
+hibernate.show_sql=true
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
